# careos

./: .env.example  ARCHITECTURE.md  BACKLOG.md  CARE_TEAM_DESIGN.md  CARE_TEAM_PHASE1_PLAN.md  DEPLOY_GCP_VM.md  IDENTITY_MULTI_TENANT_MIGRATION_PLAN.md  IMPLEMENTATION_PIPELINE.md  IMPLEMENTED_SPEC.md  OPERATIONS_RUNBOOK.md  README.md  SOVEREIGN_AGENT_ARCHITECTURE.md  SOVEREIGN_AGENT_PHASED_PLAN.md  SOVEREIGN_AGENT_UX_MANUAL.md  pyproject.toml
careos/: app_context.py  logging.py  main.py  mcp_server.py  settings.py
careos/db/: connection.py
plans/: VOICE_NOTIFICATION_PLAN.md
scripts/: bootstrap_manifest.example.json  bootstrap_preload.py  install_systemd_units.sh  onboard_support_plan.py  reset_db.sh
tests/: conftest.py  test_action_planner.py  test_action_proposals.py  test_care_plan_deltas.py  test_care_team_service.py  test_caregiver_presets.py  test_deploy_scaffolding.py  test_fallback_bridge.py  test_gateway_careos_adapter.py  test_gateway_events.py  test_gateway_health.py  test_gateway_intent_parser.py  test_gateway_openclaw_first.py  test_gateway_outbound_policy.py  test_gateway_twilio_normalization.py  test_health.py  test_identity_memberships_store.py  test_mcp_server.py  test_multi_tenant_twilio.py  test_onboarding_invites_unit.py  test_onboarding_setup.py  test_onboarding_verification.py  test_onboarding_whatsapp.py  test_openclaw_engine_compat.py  test_patient_context_service.py  test_personalization_service.py  test_personalization_store.py  test_policy_engine.py  test_recurrence.py  test_risk_fixes.py  test_scheduler_push.py  test_win_actions.py
(+60 files in other folders)
